--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7693,6 +7693,7 @@
 .geography-buttons__right {
   display: flex;
   justify-content: flex-end;
+  float: right;
 }
 
 .defra-map-clear-selection__block {
