--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -57,7 +57,8 @@
       {{ govukDetails({
         summaryText: "Alternate title (additional business name or alternative language)",
         text: docDetails.alternateTitle,
-        classes: "details-alt_title"
+        classes: "details-alt_title",
+        open: false
       }) }}
     {% endif %}
 
