--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -107,8 +107,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
           text: "Cookies"
         },
         {
-          href: "#",
+          href: routes.accessibilityStatement,
           text: "Accessibility statement"
+        },
+        {
+          href: "#",
+          text: "Terms and conditions"
         }
       ]
     }
