--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -2,6 +2,7 @@
 
 {% from "govuk/components/header/macro.njk" import govukHeader %}
 {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+{% from "govuk/components/cookie-banner/macro.njk" import govukCookieBanner %}
 
 {% set htmlClasses = "app-html-class" %}
 {% set htmlLang = "en" %}
@@ -21,6 +22,19 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
 {% endblock %}
+
+{% set cookieHtml %}
+<p class="govuk-body">We use some essential cookies to make this service work.</p>
+<p class="govuk-body">We'd like to set additional cookies so we can remember your settings, understand how people use the service and make improvements</p>
+{% endset %}
+
+{% set acceptHtml %}
+<p class="govuk-body">You've accepted additional cookies. You can <a class="govuk-link help-link" href="#">change your cookie settings</a> at any time.</p>
+{% endset %}
+
+{% set rejectHtml %}
+<p class="govuk-body">You've rejected additional cookies. You can <a class="govuk-link help-link" href="#">change your cookie settings</a> at any time.</p>
+{% endset %}
 
 {% block header %}
   <!-- Google Tag Manager (noscript) -->
@@ -83,10 +97,66 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
-    tag: {
-      text: "Beta"
-    },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    tag: { text: "Beta" },
+    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+  }) }}
+{% endblock %}
+
+{% block bodyStart %}
+  {{ govukCookieBanner({
+    ariaLabel: "Cookies on Natural Capital Search Service",
+    attributes: { id: "cookie_banner" },
+    messages: [
+      {
+        headingText: "Cookies on Natural Capital Search Service",
+        html: cookieHtml,
+        hidden: true,
+        actions: [
+          {
+            text: "Accept analytics cookies",
+            type: "button",
+            attributes: { id: "accept_button" }
+          },
+          {
+            text: "Reject analytics cookies",
+            type: "button",
+            attributes: { id: "reject_button" }
+          },
+          {
+            text: "View cookies",
+            href: "#",
+            classes: "help-link"
+          }
+        ],
+        attributes: { id: "cookie_block" }
+      },
+      {
+        html: acceptHtml,
+        role: "alert",
+        hidden: true,
+        actions: [
+          {
+            text: "Hide cookie message",
+            type: "button",
+            classes: "hide_button"
+          }
+        ],
+        attributes: { id: "accept_block" }
+      },
+      {
+        html: rejectHtml,
+        role: "alert",
+        hidden: true,
+        actions: [
+          {
+            text: "Hide cookie message",
+            type: "button",
+            classes: "hide_button"
+          }
+        ],
+        attributes: { id: "reject_block" }
+      }
+    ]
   }) }}
 {% endblock %}
 
@@ -132,4 +202,5 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
   </script>
   <script type="text/javascript" src="{{ assetPath }}/scripts/appinsights.js"></script>
   <script type="module" src="{{ assetPath }}/scripts/customScripts.js"></script>
+  <script type="module" src="{{ assetPath }}/scripts/cookieScript.js"></script>
 {% endblock %}
