--- a/src/views/partials/go_to_resource/template.njk
+++ b/src/views/partials/go_to_resource/template.njk
@@ -1,9 +1,9 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% if params.isDetailsPage %}
-  {% set buttonClasses = 'govuk-!-margin-bottom-4 ' %}
+  {% set buttonClasses = 'govuk-!-margin-bottom-4 go-to-resource' %}
 {% else %}
-  {% set buttonClasses = 'govuk-!-margin-bottom-0' %}
+  {% set buttonClasses = 'govuk-!-margin-bottom-0 go-to-resource' %}
 {% endif %}
 
 {% set openDataAttributes = {} %}
