--- a/public/css/application.css
+++ b/public/css/application.css
@@ -8392,6 +8392,13 @@
   margin: 0;
   height: fit-content;
 }
+.tab-content-natural-capital {
+font-family: "GDS Transport", arial, sans-serif;
+font-size: 19px;
+font-weight: 700;
+line-height: 25px;
+text-align: left;
+}
 
 .open-data-block--disabled {
   padding-left: 15px;
@@ -8433,8 +8440,30 @@
   border-bottom: 1px solid #b1b4b6;
 }
 
+
 .detail-map {
   border: 2px solid #0b0c0c;
+}
+
+
+.details-table-full {
+  border-collapse: collapse;
+  width: 100%;
+}
+.details-table-full th,
+.details-table-full td {
+  padding: 8px 0;
+  text-align: left;
+  vertical-align: top;
+}
+
+.details-table-full th {
+  padding-top: 0;
+}
+
+.details-table-hr{
+  padding: 0 !important;
+  border-bottom: 1px solid #B1B4B6;
 }
 
 @media (min-width: 768px) {
