--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -3,9 +3,11 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from 'govuk/components/breadcrumbs/macro.njk' import govukBreadcrumbs %}
 {% from 'govuk/components/tabs/macro.njk' import govukTabs %}
+
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% from 'partials/details/macro.njk' import details %}
+{% from 'partials/detailsHeaderTable/macro.njk' import detailsHeaderTable %}
 {% from 'partials/go_to_resource/macro.njk' import goToResource %}
 
 {% block head %}
@@ -46,10 +48,12 @@
     {% if docDetails !== undefined and docDetails.title %}
       {% set generalHTML = details({options: detailsTabOptions.general, hasData: docDetails.title}) %}
       {% set accessHtml = details({options: detailsTabOptions.access, hasData: docDetails.title}) %}
+      {% set naturalHtml = detailsHeaderTable({options: detailsTabOptions.natural,  hasData: docDetails.title}) %}
       {% set qualityHtml = details({options: detailsTabOptions.quality, hasData: docDetails.title}) %}
       {% set governanceHtml = details({options: detailsTabOptions.governance, hasData: docDetails.title}) %}
       {% set geographyHtml = details({options: detailsTabOptions.geography, hasData: docDetails.title}) %}
       {% set licenseHtml = details({options: detailsTabOptions.license, hasData: docDetails.title}) %}
+
       <h1 class='govuk-heading-m details-title'>{{ docDetails.title }}</h1>
       {% if docDetails !== undefined and docDetails.alternateTitle %}
         {{ govukDetails({
@@ -88,6 +92,16 @@
           'onclick': 'changeTitle("'+pageTitles.accessTab+'")'
         }
       },
+       {
+        label: 'Natural capital',
+        id: 'natural',
+        panel: {
+          html: naturalHtml
+        },
+        attributes: {
+          'onclick': 'changeTitle("'+pageTitles.naturalTab+'")'
+        }
+      },
       {
         label: 'Quality',
         id: 'quality',
@@ -117,7 +131,16 @@
         attributes: {
           'onclick': 'changeTitle("'+pageTitles.licenseTab+'")'
         }
-
+      },
+        {
+        label: 'Governance',
+        id: 'governance',
+        panel: {
+          html: governanceHtml
+        },
+        attributes: {
+          'onclick': 'changeTitle("'+pageTitles.governanceTab+'")'
+        }
       }
     ]
   }) }}
@@ -147,4 +170,3 @@
   <script type="module" src="{{ assetPath }}/scripts/location.js"></script>
   <script type="module" src="{{ assetPath }}/scripts/details.js"></script>
 {% endblock %}
-
