--- a/src/assets/sass/templates/_home.scss
+++ b/src/assets/sass/templates/_home.scss
@@ -29,6 +29,14 @@
   }
 }
 
+.privacy_policy_last_updated{
+  color: govuk-colour("dark-grey");
+  font-weight: 300;
+  line-height: 30px;
+  font-size: 1.5rem;
+  font-family: "GDS Transport", arial, sans-serif;
+}
+
 .educational-copy-container {
   margin-bottom: 40px;
 
